--- a/Home.html
+++ b/Home.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                            <a class="nav-link active" aria-current="page" href="./Home.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./UpcomungEvents.html">UPCOMING EVENTS</a>
@@ -128,7 +128,7 @@
                 <p class="card-text">Enjoy an afternoon of reading with many fun books to learn a lot.</p>
                 <div class="precio">
                     <p>12$</p>
-                    <a href="#" class="btn btn-primary ">Details</a>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
                 </div>
             </div>
         </div>
@@ -141,7 +141,7 @@
                 <p class="card-text">enjoy all the special recipes prepared for you and your family</p>
                 <div class="precio">
                     <p>12$</p>
-                    <a href="#" class="btn btn-primary ">Details</a>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
                 </div>
             </div>
         </div>
@@ -154,7 +154,7 @@
                 <p class="card-text">Take advantage of the recreational spaces that have been prepared for you.</p>
                 <div class="precio">
                     <p>12$</p>
-                    <a href="#" class="btn btn-primary ">Details</a>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
                 </div>
             </div>
         </div>
@@ -167,7 +167,7 @@
                 <p class="card-text">More than 20 movies in theaters to keep you entertained for many hours</p>
                 <div class="precio">
                     <p>12$</p>
-                    <a href="#" class="btn btn-primary ">Details</a>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
                 </div>
             </div>
         </div>
@@ -175,25 +175,22 @@
     </main>
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-
-
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook"></a>
             <a href="https://www.instagram.com/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram"></a>
         </div>
 
         <h7>©2024 Manuel cerquera</h7>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
