--- a/PastEvents.html
+++ b/PastEvents.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Style.css">
 </head>
-
 
 <body>
     <header>
-        <nav class="navbar navbar-dark navbar-expand-lg  bg-dark">
+        <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img
+                <a class="navbar-brand" href="./Home.html"><img
                         src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/amazing_brand.png"
                         alt="Logo" height="30px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="./Home.html">HOME</a>
+                            <a class="nav-link" aria-current="page" href="./Home.html">HOME</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./UpcomungEvents.html">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">PAST EVENTS</a>
+                            <a class="nav-link active" href="./PastEvents.html">PAST EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./Contact.html">CONTACT</a>
@@ -38,23 +38,159 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./Stats.html">STATS</a>
                         </li>
-    
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    
 
-    <h1>past</h1>
+    <main>
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="teatro">
 
+                </div>
+                <div class="carousel-item">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_4.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="cine">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="sing">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </main>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <label class="nav-link">
+                            <input type="checkbox" name="music" value="music"> Music
+                        </label>
+                    </li>
+                    <li class="nav-item">
+                        <label class="nav-link">
+                            <input type="checkbox" name="museum" value="museum"> museum
+                        </label>
+                    </li>
+                    <li class="nav-item">
+                        <label class="nav-link ">
+                            <input type="checkbox" name="food" value="sports" food> Food
+                        </label>
+                    </li>
+                    <li class="nav-item">
+                        <label class="nav-link ">
+                            <input type="checkbox" name="sports" value="sports" sports> Sports
+                        </label>
+                    </li>
+                    <li class="nav-item">
+                        <label class="nav-link ">
+                            <input type="checkbox" name="cinema" value="cinema" cinema> Cinema
+                        </label>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit"><img
+                            src="https://cdn-icons-png.flaticon.com/512/2089/2089732.png" alt="lupa"
+                            height="20px"></button>
+                </form>
+            </div>
+        </div>
+    </nav>
+
+
+    <main class="m-4 d-flex flex-wrap justify-content-center gap-3">
+        <div class="card" style="width: 18rem;">
+            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/cinema.jpg" class="card-img-top"
+                alt="books">
+            <div class="card-body">
+                <h5 class="card-title">Cinema</h5>
+                <p class="card-text">Enjoy an afternoon of reading with many fun books to learn a lot.</p>
+                <div class="precio">
+                    <p>12$</p>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/marathon.jpg"
+                class="card-img-top" alt="food">
+            <div class="card-body">
+                <h5 class="card-title">Marathon</h5>
+                <p class="card-text">enjoy all the special recipes prepared for you and your family</p>
+                <div class="precio">
+                    <p>12$</p>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/costume_party.jpg"
+                class="card-img-top" alt="Party">
+            <div class="card-body">
+                <h5 class="card-title">Party</h5>
+                <p class="card-text">Take advantage of the recreational spaces that have been prepared for you.</p>
+                <div class="precio">
+                    <p>12$</p>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+            <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg" class="card-img-top"
+                alt="cine">
+            <div class="card-body">
+                <h5 class="card-title">Food</h5>
+                <p class="card-text">More than 20 movies in theaters to keep you entertained for many hours</p>
+                <div class="precio">
+                    <p>12$</p>
+                    <a href="./Details.html" class="btn btn-primary ">Details</a>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+
+    <footer class="footer">
+        <div>
+            <a href="https://wa.me/+573213006662"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt=""></a>
+            <a href="https://www.facebook.com/Manuel.cerquera/"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt=""></a>
+            <a href="https://www.instagram.com/"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt=""></a>
+        </div>
+
+        <h7>©2024 Manuel cerquera</h7>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
-<footer>
-
-</footer>
-
 
 </html>
