--- a/Contact.html
+++ b/Contact.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aevents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Style.css">
+    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
+    
 </head>
 
 
@@ -27,7 +30,7 @@
                             <a class="nav-link" aria-current="page" href="./Home.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./UpcomungEvents.html">UPCOMING EVENTS</a>
+                            <a class="nav-link" href="./UpcomingEvents.html">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
@@ -38,23 +41,91 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./Stats.html">STATS</a>
                         </li>
-    
+
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-   
+    <main>
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_1.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="teatro">
 
-    <h1>Contact</h1>
+                </div>
+                <div class="carousel-item">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_2.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="cine">
+                </div>
+                <div class="carousel-item">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/optional_banner_5.jpg"
+                        class="d-block w-100 img-fluid" style="object-fit: cover; height: 300px;" alt="sing">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </main>
+
+
+    <h1 class="title d-flex justify-content-center">Contact</h1>
+    <main>
+        <form>
+            <div class="m-5">
+                <div class="mb-3 ">
+                    <label for="exampleFormControlInput1" class="form-label">Name</label>
+                    <input class="form-control" type="text" placeholder="Enter name"
+                        aria-label="Disabled input example" width="50%">
+                </div>
+                <div class="mb-3">
+                    <label for="Email" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="Email" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="Message" class="form-label">Message</label>
+                    <textarea class="form-control" id="Message" rows="3"></textarea>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary mb-3">Submit</button>
+                </div>
+            </div>
+        </form>
+
+
+
+    </main>
+    <footer class="footer">
+        <div>
+            <a href="https://wa.me/+573213006662"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp"
+                    height="40px"></a>
+            <a href="https://www.facebook.com/Manuel.cerquera/"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook"
+                    height="40px"></a>
+            <a href="https://www.instagram.com/"><img
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram"
+                    height="40px"></a>
+        </div>
+
+        <h7>©2024 Manuel cerquera</h7>
+
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
-<footer>
 
-</footer>
 
 
 </html>
