--- a/Details.html
+++ b/Details.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<link rel="stylesheet" href="./Style.css">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Style.css">
+    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -46,25 +47,27 @@
     <main class="mdetails">
         <div class="card mb-3" style="min-width: 540px;">
             <div class="row g-0">
-              <div class="col-md-4">
-                <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg" class="img-fluid rounded-start" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Description of events</h5>
-                  <p class="card-text card-text1">  name: Festival of the collectivities<br>
-                    date: 2022-12-12<br>
-                    description: Enjoy your favorite dishes from different countries in a unique event for the whole family.<br>
-                    category:Food Fair<br>
-                    place: Room A<br>
-                    capacity: 45000 <br>
-                    assistance:42756 <br>
-                    price: 5 <br>
-                     
-                    
-                  </p>
+                <div class="col-md-4">
+                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg"
+                        class="img-fluid rounded-start" alt="...">
                 </div>
-              </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Description of events</h5>
+                        <p class="card-text card-text1"> name: Festival of the collectivities<br>
+                            date: 2022-12-12<br>
+                            description: Enjoy your favorite dishes from different countries in a unique event for the
+                            whole family.<br>
+                            category:Food Fair<br>
+                            place: Room A<br>
+                            capacity: 45000 <br>
+                            assistance:42756 <br>
+                            price: 5 <br>
+
+
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -82,8 +85,8 @@
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
