--- a/Home.html
+++ b/Home.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style.css">
+    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                             <a class="nav-link active" aria-current="page" href="./Home.html">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./UpcomungEvents.html">UPCOMING EVENTS</a>
+                            <a class="nav-link" href="./UpcomingEvents.html">UPCOMING EVENTS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./PastEvents.html">PAST EVENTS</a>
@@ -125,7 +126,7 @@
                 alt="books">
             <div class="card-body">
                 <h5 class="card-title">Books</h5>
-                <p class="card-text">Enjoy an afternoon of reading with many fun books to learn a lot.</p>
+                <p class="card-text">Enjoy an afternoon of reading with many fun books to learn a lot easy lot.</p>
                 <div class="precio">
                     <p>12$</p>
                     <a href="./Details.html" class="btn btn-primary ">Details</a>
@@ -138,7 +139,7 @@
                 class="card-img-top" alt="food">
             <div class="card-body">
                 <h5 class="card-title">Food</h5>
-                <p class="card-text">enjoy all the special recipes prepared for you and your family</p>
+                <p class="card-text">enjoy all the special recipes prepared for you and your family easy </p>
                 <div class="precio">
                     <p>12$</p>
                     <a href="./Details.html" class="btn btn-primary ">Details</a>
@@ -178,11 +179,11 @@
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp" height="40px"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook" height="40px"></a>
             <a href="https://www.instagram.com/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram" height="40px"></a>
         </div>
 
         <h7>©2024 Manuel cerquera</h7>
