--- a/Contact.html
+++ b/Contact.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aevents</title>
+    <title>Contact</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style.css">
-    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png" type="image/x-icon">
-    
+    <link rel="shortcut icon" href="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/favicon.png"
+        type="image/x-icon">
+
 </head>
 
 
@@ -17,9 +18,9 @@
     <header>
         <nav class="navbar navbar-dark navbar-expand-lg  bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img
+                <a class="navbar-brand" href="./Home.html"><img
                         src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/amazing_brand.png"
-                        alt="Logo" height="30px"></a>
+                        alt="Logo" height="30"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -79,45 +80,42 @@
 
 
     <h1 class="title d-flex justify-content-center">Contact</h1>
-    <main>
-        <form>
-            <div class="m-5">
-                <div class="mb-3 ">
-                    <label for="exampleFormControlInput1" class="form-label">Name</label>
-                    <input class="form-control" type="text" placeholder="Enter name"
-                        aria-label="Disabled input example" width="50%">
-                </div>
-                <div class="mb-3">
-                    <label for="Email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="Email" placeholder="name@example.com">
-                </div>
-                <div class="mb-3">
-                    <label for="Message" class="form-label">Message</label>
-                    <textarea class="form-control" id="Message" rows="3"></textarea>
-                </div>
-                <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary mb-3">Submit</button>
-                </div>
+
+    <form>
+        <div class="m-5">
+            <div class="mb-3 ">
+                <label for="Name" class="form-label">Name</label>
+                <input class="form-control" type="text" id="Name" placeholder="Enter name"
+                    aria-label="Disabled input example">
             </div>
-        </form>
+            <div class="mb-3">
+                <label for="Email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="Email" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="Message" class="form-label">Message</label>
+                <textarea class="form-control" id="Message" rows="3"></textarea>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-primary mb-3">Submit</button>
+            </div>
+        </div>
+    </form>
 
-
-
-    </main>
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
                     src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp"
-                    height="40px"></a>
+                    height="40"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
                     src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook"
-                    height="40px"></a>
+                    height="40"></a>
             <a href="https://www.instagram.com/"><img
                     src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram"
-                    height="40px"></a>
+                    height="40"></a>
         </div>
 
-        <h7>©2024 Manuel cerquera</h7>
+        <h6>©2024 Manuel cerquera</h6>
 
     </footer>
 
