--- a/Details.html
+++ b/Details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AEvents</title>
+    <title>Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style.css">
@@ -17,7 +17,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="./Home.html"><img
                         src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/amazing_brand.png"
-                        alt="Logo" height="30px"></a>
+                        alt="Logo" height="30"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,7 +49,7 @@
             <div class="row g-0">
                 <div class="col-md-4">
                     <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg"
-                        class="img-fluid rounded-start" alt="...">
+                        class="img-fluid rounded-start" alt="comida">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
@@ -74,14 +74,14 @@
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp" height="40"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook" height="40"></a>
             <a href="https://www.instagram.com/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt=""></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram" height="40"></a>
         </div>
 
-        <h7>©2024 Manuel cerquera</h7>
+        <h6>©2024 Manuel cerquera</h6>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
