--- a/UpcomingEvents.html
+++ b/UpcomingEvents.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AEvents</title>
+    <title>UpcomingEvents</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./Style.css">
@@ -17,7 +17,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="./Home.html"><img
                         src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/amazing_brand.png"
-                        alt="Logo" height="30px"></a>
+                        alt="Logo" height="30"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -95,17 +95,17 @@
                     </li>
                     <li class="nav-item">
                         <label class="nav-link ">
-                            <input type="checkbox" name="food" value="sports" food> Food
+                            <input type="checkbox" name="food" value="sports"> Food
                         </label>
                     </li>
                     <li class="nav-item">
                         <label class="nav-link ">
-                            <input type="checkbox" name="sports" value="sports" sports> Sports
+                            <input type="checkbox" name="sports" value="sports"> Sports
                         </label>
                     </li>
                     <li class="nav-item">
                         <label class="nav-link ">
-                            <input type="checkbox" name="cinema" value="cinema" cinema> Cinema
+                            <input type="checkbox" name="cinema" value="cinema"> Cinema
                         </label>
                     </li>
                 </ul>
@@ -113,14 +113,14 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit"><img
                             src="https://cdn-icons-png.flaticon.com/512/2089/2089732.png" alt="lupa"
-                            height="20px"></button>
+                            height="20"></button>
                 </form>
             </div>
         </div>
     </nav>
 
 
-    <main class="m-4 d-flex flex-wrap justify-content-center gap-3">
+    <section class="m-4 d-flex flex-wrap justify-content-center gap-3">
         <div class="card" style="width: 18rem;">
             <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/books.jpg" class="card-img-top"
                 alt="books">
@@ -173,20 +173,20 @@
             </div>
         </div>
 
-    </main>
+    </section>
 
 
     <footer class="footer">
         <div>
             <a href="https://wa.me/+573213006662"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp" height="40px"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/whatsapp.png" alt="whatsapp" height="40"></a>
             <a href="https://www.facebook.com/Manuel.cerquera/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook" height="40px"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/facebook.png" alt="facebook" height="40"></a>
             <a href="https://www.instagram.com/"><img
-                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram" height="40px"></a>
+                    src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/instagram.png" alt="instagram" height="40"></a>
         </div>
 
-        <h7>©2024 Manuel cerquera</h7>
+        <h6>©2024 Manuel cerquera</h6>
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
