se hizo funcional los checkbox y el search

--- a/Details.html
+++ b/Details.html
@@ -44,32 +44,13 @@
             </div>
         </nav>
     </header>
-    <main class="mdetails">
-        <div class="card mb-3" style="min-width: 200px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="./Recursos_Amazing_Events_Task_1/Recursos_Amazing_Events_Task_1/food_fair.jpg"
-                        class="img-fluid rounded-start" alt="comida">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Description of events</h5>
-                        <p class="card-text card-text1"> name: Festival of the collectivities<br>
-                            date: 2022-12-12<br>
-                            description: Enjoy your favorite dishes from different countries in a unique event for the
-                            whole family.<br>
-                            category:Food Fair<br>
-                            place: Room A<br>
-                            capacity: 45000 <br>
-                            assistance:42756 <br>
-                            price: 5 <br>
+    
+    <main class="d-flex justify-content-center align-items-center">
 
+        <div id="container_card_details" class="container-fluid d-flex flex-wrap justify-content-center py-3 px-3 w-75 h-100" > </div>
 
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <script src="./details.js"></script>
+
     </main>
     <footer class="footer">
         <div>
